# Copyright 2024 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build targets for rlds.
load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

py_library(
    name = "rlds",
    srcs = ["__init__.py"],
    srcs_version = "PY3",
    deps = [
        ":rlds_types",
        "//rlds/transformations",
    ],
)

py_library(
    name = "rlds_types",
    srcs = ["rlds_types.py"],
    srcs_version = "PY3",
    deps = [requirement("tensorflow")],
)

py_test(
    name = "rlds_types_test",
    srcs = ["rlds_types_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":rlds_types",
        requirement("absl-py"),
        requirement("tensorflow"),
    ],
)
