# Copyright 2024 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build targets for rlds.tfds.

load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

py_library(
    name = "tfds",
    srcs = ["__init__.py"],
    srcs_version = "PY3",
    deps = [
        ":config_generator",
    ],
)

py_library(
    name = "config_generator",
    srcs = ["config_generator.py"],
    srcs_version = "PY3",
    deps = [
        "//rlds:rlds_types",
        requirement("tensorflow"),
        requirement("tensorflow-datasets"),
        requirement("numpy"),
    ],
)

py_library(
    name = "episode_writer",
    srcs = ["episode_writer.py"],
    srcs_version = "PY3",
    deps = [
        "//rlds:rlds_types",
        requirement("tensorflow-datasets"),
    ],
)

py_test(
    name = "config_generator_test",
    srcs = ["config_generator_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":config_generator",
        requirement("absl-py"),
        requirement("numpy"),
        requirement("tensorflow"),
        requirement("tensorflow-datasets"),
    ],
)
